# opencast-auth

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
accounts/: admin.py  models.py  serializers.py  test_models.py  test_serializers.py  test_views.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
cli/: __init__.py  opencast_cli.py  test_opencast_cli.py
opencast_auth/: asgi.py  settings.py  urls.py  wsgi.py
organizations/: admin.py  models.py  serializers.py  test_models.py  test_serializers.py  test_views.py  urls.py  views.py
organizations/migrations/: 0001_initial.py  0002_alter_role_options_alter_role_unique_together_and_more.py
scripts/: setup-branch-protection.md
